--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,11 @@
             <input type="file" name="file" />
             <input type="hidden" value="{{original_name}}" name="pre_name" />
             <select name="theme">
-                <option value="face_paint_512_v1" selected>v1</option>
-                <option value="face_paint_512_v2">v2</option>
-                <option value="celeba_distill">celeba_distill</option>
-                <option value="paprika">paprika</option>
+                <option value="face_paint_512_v1.pt" selected>v1</option>
+                <option value="face_paint_512_v2.pt">v2</option>
+                <option value="celeba_distill.pt">celeba_distill</option>
+                <option value="paprika.pt">paprika</option>
+                <option value="arcane.pt">arcane</option>
             </select>
             <input type="submit" value="변환" />
         </form>
