--- a/src/Components/Styles/Footer.module.css
+++ b/src/Components/Styles/Footer.module.css
@@ -1,3 +1,9 @@
 .Foot-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
   background-color: #870419;
 }
