--- a/src/Components/Styles/Second.css
+++ b/src/Components/Styles/Second.css
@@ -1,18 +1,22 @@
+.wrap2 {
+  width: 100svw;
+  height: 100svh;
+  max-height: 100svh;
+  display: flex;
+  flex-direction: column;
+}
+
 .camera {
   display: flex;
-  width: 100%;
-  height: 90%;
-  padding-left: 10px;
+  min-width: 100svw;
+  flex: 1;
   flex-direction: row;
 }
 
-.foot-container {
-  width: 1024px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #c51130;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
+#videoCam {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(180deg);
+  object-fit: cover;
 }
