--- a/web/src/Components/Styles/Footer.css
+++ b/web/src/Components/Styles/Footer.css
@@ -1,9 +1,9 @@
-.App {
+#footer {
     display: flex;
     flex-direction: column;
-    min-width: 100%;
-    min-height: 100%;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100px;
     background: var(--COL-PRIMARY1);
 }
