--- a/web/src/Pages/Styles/Main.css
+++ b/web/src/Pages/Styles/Main.css
@@ -1,4 +1,29 @@
 #main {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+    min-width: calc(100% - 120px);
+    min-height: calc(100% - 120px);
+    width: calc(100% - 120px);
+    height: calc(100% - 120px);
+    border: 20px solid var(--COL-WHITE)
 }
+
+#main .title {
+    margin-bottom: 12px;
+    font-size: 120px;
+    font-weight: 700;
+    color: var(--COL-WHITE);
+}
+
+#main .subTitle {
+    font-size: 48px;
+    font-weight: 400;
+    color: var(--COL-WHITE);
+}
+
+#main .languageWrap {}
+
+#main .buttonWrap {}
