--- a/web/src/App.css
+++ b/web/src/App.css
@@ -5,5 +5,29 @@
     min-height: 100%;
     width: 100%;
     height: 100%;
-    background: var(--COL-PRIMARY1);
+    background: linear-gradient(-45deg, var(--COL-PRIMARY1), var(--COL-PRIMARY4), var(--COL-PRIMARY1), var(--COL-PRIMARY2), var(--COL-PRIMARY5));
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    25% {
+        background-position: 100% 100%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    75% {
+        background-position: 100% 0%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
