--- a/web/src/Components/Styles/Button.css
+++ b/web/src/Components/Styles/Button.css
@@ -12,9 +12,20 @@
     transition: background .3s;
 }
 
+.nextStepBtn.disable {
+    background: var(--COL-GRAY3);
+    font-weight: 500;
+    color: var(--COL-GRAY1);
+}
+
 .nextStepBtn:hover {
     background: var(--COL-PRIMARY4);
 }
+
+.nextStepBtn.disable:hover {
+    background: var(--COL-GRAY3);
+}
+
 
 .changeBtn {
     flex: 1;
@@ -33,4 +44,19 @@
 
 .changeBtn:hover {
     background: var(--COL-GRAY1);
+}
+
+.largeBtn {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 640px;
+    height: 140px;
+    border: 4px solid var(--COL-WHITE);
+    font-size: 56px;
+    font-weight: 500;
+    color: var(--COL-WHITE);
+    transition: background .3s;
 }
