--- a/web/src/Layouts/Styles/Layout.css
+++ b/web/src/Layouts/Styles/Layout.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    animation: fadeIn 1s;
+    animation-fill-mode: forwards;
 }
 
 .layout #content {
