--- a/web/src/Pages/Styles/Print.css
+++ b/web/src/Pages/Styles/Print.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: fadeIn 1s;
+    animation-fill-mode: forwards;
 }
 
 #print .resultWrap {
