--- a/web/src/Pages/Styles/SelectBg.css
+++ b/web/src/Pages/Styles/SelectBg.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
+    animation: fadeIn 1s;
+    animation-fill-mode: forwards;
 }
 
 #selectBg .frameListWrap {
@@ -25,13 +27,16 @@
     justify-content: center;
     align-items: center;
     padding: 12px;
-    width: 440px;
-    height: 620px;
+    width: 428px;
+    height: 628px;
+    border: 6px solid transparent;
+    transform: scale(1);
+    transition: border .3s;
 }
 
-.frameWrap.active {
+.frameWrap.selected {
     width: 428px;
-    height: 608px;
+    height: 628px;
     border: 6px solid var(--COL-PRIMARY1);
 }
 
@@ -40,7 +45,6 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    padding: 16px 0;
     width: 100%;
     height: 100%;
     background: var(--COL-GRAY2);
@@ -50,12 +54,17 @@
 .frame .row2 {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 10px;
 }
 
+.frame .row2:first-child {
+    margin-top: 20px;
+}
+
 .frame .pic {
-    width: 195px;
-    height: 248px;
+    width: 44%;
+    aspect-ratio: 1 / 1.414;
     object-fit: cover;
     background: var(--COL-GRAY1);
 }
@@ -75,5 +84,7 @@
 }
 
 .frame3 {
+    height: 622px;
     background: var(--COL-WHITE);
+    border-top: 6px solid var(--COL-PRIMARY1);
 }
