--- a/web/src/Pages/Styles/SelectPic.css
+++ b/web/src/Pages/Styles/SelectPic.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    animation: fadeIn 1s;
+    animation-fill-mode: forwards;
 }
 
 .selectedPicWrap {
