--- a/web/src/Components/Styles/Button.css
+++ b/web/src/Components/Styles/Button.css
@@ -60,3 +60,18 @@
     color: var(--COL-WHITE);
     transition: background .3s;
 }
+
+.largeBtn2 {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 640px;
+    height: 140px;
+    border: 4px solid var(--COL-WHITE);
+    font-size: 44px;
+    font-weight: 500;
+    color: var(--COL-WHITE);
+    transition: background .3s;
+}
