--- a/web/src/Components/Styles/Result.css
+++ b/web/src/Components/Styles/Result.css
@@ -1,42 +1,45 @@
-#print {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation: fadeIn 1s;
-    animation-fill-mode: forwards;
-}
-
-#print .resultWrap {
-    height: 80%;
-    aspect-ratio: 1/1.414;
-    box-shadow: 0px 4px 32px #CCCCCC;
-}
-
 #print .resultWrap .result {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 24px;
+    position: relative;
     padding: 32px;
     width: calc(100% - 64px);
     height: calc(100% - 64px);
     background: var(--COL-WHITE);
 }
 
-#print .resultWrap .result .row {
-    display: flex;
-    flex-direction: row;
-    gap: 24px;
-    width: 100%
-}
-
-#print .resultWrap .result .row .pic {
-    width: calc(50% - 12px);
-    max-width: calc(50% - 12px);
+#print .resultWrap .result .imgWrap {
+    position: absolute;
+    width: 45%;
     aspect-ratio: 1/1.3;
     background: var(--COL-GRAY2);
+}
+
+#print .resultWrap .result .imgWrap:nth-child(1) {
+    top: 32px;
+    left: 32px;
+}
+
+#print .resultWrap .result .imgWrap:nth-child(2) {
+    top: 32px;
+    right: 32px;
+}
+
+#print .resultWrap .result .imgWrap:nth-child(3) {
+    top: px;
+    left: 32px;
+}
+
+#print .resultWrap .result .imgWrap:nth-child(4) {
+    top: 32px;
+    right: 32px;
+}
+
+#print .resultWrap .result .imgWrap .pic {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -60,10 +63,4 @@
     height: 622px;
     background: var(--COL-WHITE);
     border-top: 6px solid var(--COL-PRIMARY1);
-}
-
-.btnWrap {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
 }
