--- a/web/src/Pages/Styles/SelectPic.css
+++ b/web/src/Pages/Styles/SelectPic.css
@@ -19,20 +19,16 @@
 .selectedPic {
     display: flex;
     flex-direction: column;
-    gap: 40px;
-}
-
-.selectedPic .row {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .selectedPic .placeHolder {
-    width: 335px;
-    height: 426px;
-    max-width: 335px;
-    max-height: 426px;
+    height: 80%;
+    max-height: 80%;
+    aspect-ratio: 1/1.414;
     object-fit: cover;
     background: var(--COL-GRAY2);
     border: 1px solid var(--COL-GRAY2);
