--- a/web/src/Components/Styles/Header.css
+++ b/web/src/Components/Styles/Header.css
@@ -5,6 +5,7 @@
     padding: 0 32px;
     width: calc(100% - 64px);
     height: 120px;
+    min-height: 120px;
     background: var(--COL-WHITE);
     border-bottom: 1px solid var(--COL-GRAY2);
 }
