--- a/web/src/Layouts/Styles/Layout.css
+++ b/web/src/Layouts/Styles/Layout.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    max-height: 100svh;
     animation: fadeIn 1s;
     animation-fill-mode: forwards;
 }
