--- a/web/src/Pages/Styles/Print.css
+++ b/web/src/Pages/Styles/Print.css
@@ -10,6 +10,7 @@
 
 #print .resultWrap {
     height: 80%;
+    max-height: 1200px;
     aspect-ratio: 1/1.414;
     box-shadow: 0px 4px 32px #CCCCCC;
 }
