--- a/web/src/Pages/Styles/Camera.css
+++ b/web/src/Pages/Styles/Camera.css
@@ -9,6 +9,30 @@
     animation-fill-mode: forwards;
 }
 
+#camera .guide {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    height: 70%;
+    border: 8px solid rgba(255, 255, 255, 0.75);
+    border-radius: 50%;
+    z-index: 100;
+    transform: translate(-50%, -50%);
+}
+
+#camera .guide span {
+    position: absolute;
+    bottom: -100px;
+    left: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 600;
+    color: var(--COL-WHITE);
+    transform: translateX(-50%);
+}
+
 #lastPic {
     position: absolute;
     right: 20px;
