--- a/web/src/Pages/Styles/Print.css
+++ b/web/src/Pages/Styles/Print.css
@@ -16,6 +16,7 @@
 }
 
 #print .resultWrap .result {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,6 +48,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 24px 0;
 }
 
 #print .resultWrap .result.frame1 {
