--- a/web/src/Components/Styles/Footer.css
+++ b/web/src/Components/Styles/Footer.css
@@ -4,6 +4,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 60px;
     background: var(--COL-PRIMARY1);
+}
+
+#footer img {
+    height: 32px;
 }
