--- a/web/src/Components/Styles/Slide.css
+++ b/web/src/Components/Styles/Slide.css
@@ -25,12 +25,22 @@
 }
 
 #slide .col:nth-child(2) {
-    animation: downSlide 19s linear infinite;
+    animation: downSlide1 19s linear infinite;
     animation-fill-mode: forwards;
 }
 
 #slide .col:nth-child(3) {
     animation: upSlide2 20s linear infinite;
+    animation-fill-mode: forwards;
+}
+
+#slide .col:nth-child(4) {
+    animation: downSlide2 19s linear infinite;
+    animation-fill-mode: forwards;
+}
+
+#slide .col:nth-child(5) {
+    animation: upSlide3 20s linear infinite;
     animation-fill-mode: forwards;
 }
 
@@ -67,13 +77,33 @@
     }
 }
 
+@keyframes upSlide3 {
+    0% {
+        transform: translateY(-400px);
+    }
 
-@keyframes downSlide {
+    100% {
+        transform: translateY(-4720px);
+    }
+}
+
+
+@keyframes downSlide1 {
     0% {
         transform: translateY(-4320px);
     }
 
     100% {
         transform: translateY(0px);
+    }
+}
+
+@keyframes downSlide2 {
+    0% {
+        transform: translateY(-4520px);
+    }
+
+    100% {
+        transform: translateY(-200px);
     }
 }
