--- a/web/src/Pages/Styles/Camera.css
+++ b/web/src/Pages/Styles/Camera.css
@@ -9,12 +9,22 @@
     animation-fill-mode: forwards;
 }
 
+#camera .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(4px);
+    opacity: 50%;
+}
+
 #camera .guide {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 80%;
-    height: 70%;
+    width: 20%;
+    height: 50%;
     border: 8px solid rgba(255, 255, 255, 0.75);
     border-radius: 50%;
     z-index: 100;
@@ -27,7 +37,7 @@
     left: 50%;
     width: 100%;
     text-align: center;
-    font-size: 48px;
+    font-size: 32px;
     font-weight: 600;
     color: var(--COL-WHITE);
     transform: translateX(-50%);
