--- a/web/src/Pages/Styles/Main.css
+++ b/web/src/Pages/Styles/Main.css
@@ -14,6 +14,7 @@
 }
 
 #main .title {
+    margin-top: 200px;
     margin-bottom: 12px;
     font-size: 120px;
     font-weight: 700;
@@ -21,14 +22,16 @@
 }
 
 #main .subTitle {
+    flex: 1;
     font-size: 48px;
     font-weight: 400;
     color: var(--COL-WHITE);
 }
 
-#main .languageWrap {}
+#main .space {
+    flex: 1;
+}
 
 #main .buttonWrap {
-    position: fixed;
-    bottom: 220px
+    margin-bottom: 120px;
 }
