--- a/web/src/Pages/Styles/Print.css
+++ b/web/src/Pages/Styles/Print.css
@@ -10,7 +10,7 @@
 
 #print .resultWrap {
     height: 80%;
-    max-height: 1200px;
+    max-height: 800px;
     aspect-ratio: 1/1.414;
     background: var(--COL-WHITE);
     box-shadow: 0px 4px 32px #CCCCCC;
@@ -21,23 +21,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
-    padding: 32px;
-    width: calc(100% - 64px);
-    height: calc(100% - 64px);
+    gap: 14px;
+    padding: 20px;
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
     background: var(--COL-WHITE);
 }
 
 #print .resultWrap .result .row {
     display: flex;
     flex-direction: row;
-    gap: 24px;
+    gap: 14px;
     width: 100%
 }
 
 #print .resultWrap .result .row .pic {
-    width: calc(50% - 12px);
-    max-width: calc(50% - 12px);
+    width: calc(50%);
+    max-width: calc(50% - 7px);
     aspect-ratio: 1/1.3;
     background: var(--COL-GRAY2);
     object-fit: cover;
@@ -49,7 +49,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 24px 0;
+    height: 20px;
+}
+
+#print .resultWrap .result .logo img {
+    width: 80%;
+    height: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 #print .resultWrap .result.frame1 {
